# rich-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: bench_simple.py
richbench/: __init__.py  __main__.py
tinybench/: __init__.py  __main__.py
