[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "richbench"
authors = [{name = "Anthony Shaw"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["rich>=12.5.0", "pyinstrument"]
requires-python = ">=3.6"
readme = "README.md"

[project.scripts]
richbench = "richbench.__main__:main"

[project.urls]
Home = "https://github.com/tonybaloney/rich-bench"
